RESOLVED FIXED311681
32-bit build fixes for libpas (round 2)
https://bugs.webkit.org/show_bug.cgi?id=311681
Summary 32-bit build fixes for libpas (round 2)
Justin Michaud
Reported 2026-04-07 15:04:09 PDT
32-bit build fixes for libpas (round 2)
Attachments
Justin Michaud
Comment 1 2026-04-07 15:06:57 PDT
EWS
Comment 2 2026-04-08 07:27:37 PDT
Committed 310778@main (df879d3c2a8c): <https://commits.webkit.org/310778@main> Reviewed commits have been landed. Closing PR #62223 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2026-04-08 07:28:13 PDT
Note You need to log in before you can comment on or make changes to this bug.