32-bit build fixes for libpas (round 2) https://bugs.webkit.org/show_bug.cgi?id=311681

Reviewed by Yusuke Suzuki.

Enable PAS_ASSERT_IF on 32-bit and make some pas util functions
compile successfully (even if they don't work).

We also make sure that mimalloc builds inside 32-bit containers
on 64-bit machines by setting CMAKE_SYSTEM_PROCESSOR. Before,
it tried to enable arm64-specific optimizations.

Canonical link: https://commits.webkit.org/310778@main