Source/bmalloc/libpas/src/libpas/pas_utils.c
@@ -67,6 +67,18 @@
 #define CRASH_GPR5 "x22"
 #define CRASH_GPR6 "x23"
 
+#elif PAS_ARM32
+
+#define PAS_FATAL_CRASH_INST "bkpt #0"
+
+#define CRASH_GPR0 "r4"
+#define CRASH_GPR1 "r5"
+#define CRASH_GPR2 "r6"
+#define CRASH_GPR3 "r8"
+#define CRASH_GPR4 "r9"
+#define CRASH_GPR5 "r10"
+#define CRASH_GPR6 "r11"
+
 #endif
 
 #if defined(PAS_BMALLOC) && PAS_BMALLOC
@@ -77,9 +89,9 @@
 #endif // defined(__has_include)
 #endif // defined(PAS_BMALLOC) && PAS_BMALLOC
 
-#if PAS_X86_64 || PAS_ARM64
+#if PAS_X86_64 || PAS_ARM64 || PAS_ARM32
 
-#if PAS_OS(DARWIN) && PAS_VA_OPT_SUPPORTED
+#if (PAS_OS(DARWIN) || PAS_OS(LINUX)) && PAS_VA_OPT_SUPPORTED
 
 #ifdef __cplusplus
 extern "C" {
@@ -160,7 +172,7 @@ PAS_NEVER_INLINE PAS_NO_RETURN void pas_crash_with_info_impl6(size_t reason, siz
 #endif
 
 
-#endif /* PAS_OS(DARWIN) && PAS_VA_OPT_SUPPORTED */
+#endif /* (PAS_OS(DARWIN) || PAS_OS(LINUX)) && PAS_VA_OPT_SUPPORTED */
 
 PAS_NEVER_INLINE PAS_NO_RETURN static void pas_crash_with_info_impl(size_t reason, size_t misc1, size_t misc2, size_t misc3, size_t misc4, size_t misc5, size_t misc6)
 {
